# sea_battle-fastapi_postgresql

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: config.py  logger.py
src/api/: __init__.py
src/api/dependencies/: __init__.py  db.py  security.py
src/api/v1/: games.py  v1_router.py  websocket.py
src/core/: __init__.py  db.py
src/db/enums/: __init__.py  game_status.py
src/db/models/: __init__.py  base_model.py  game.py  game_board.py  player.py
src/db/repositories/: player_repository.py
src/db/schemas/: __init__.py  game.py  game_board.py  player.py
src/schemas/: __init__.py  auth.py  websocket.py
src/services/: auth.py
